--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,4 +23,4 @@ jobs:
           pip install pytest
       - name:  Run tests
         run: |
-          python -m unittest test_app.py
+          python -m unittest app_test.py
